re PR rtl-optimization/16408 (internal compiler error: in delete_insn, at cfgrtl.c:146)

PR rtl-optimization/16408
	* gcse.c (replace_store_insn): Fix LIBCALL/RETVAL notes.

From-SVN: r86929